rtl: fix buidl failure on -fchecking=2 [PR111642]

Before the change `make bootstrap4` (or `make profiledbootstrap`) failed
as:

    gcc/rtl-tests.cc:249:25:   in ‘constexpr’ expansion of ‘poly_int<1, long int>(1, 1)’
    gcc/poly-int.h:453:5: error: too many initializers for ‘long int [1]’

The failure happened only in stage4 due to a gcc bug which accepts
invalid C++ without `-fchecking=2`: https://gcc.gnu.org/PR111647#c1.

The change hides tests that rely on 2 and more polynomials under `#if`.

gcc/
	PR bootstrap/111642
	* rtl-tests.cc (const_poly_int_tests): Guard tests with
	NUM_POLY_INT_COEFFS > 1.
	* simplify-rtx.cc (simplify_const_poly_int_tests): Ditto.